--- a/java/pom.xml
+++ b/java/pom.xml
@@ -61,7 +61,7 @@
 		<dependency>
 			<groupId>net.razorvine</groupId>
 			<artifactId>serpent</artifactId>
-			<version>1.16</version>
+			<version>1.17</version>
 		</dependency>
 	</dependencies>
 	<scm>
@@ -95,6 +95,6 @@
 Pyrolite only implements part of the client side Pyro library, hence its name 'lite'...  But because Pyrolite has no dependencies, it is a much lighter way to use Pyro from Java/.NET than a solution with jython+pyro or IronPython+Pyro would provide. So if you don't need Pyro's full feature set, and don't require your Java/.NET code to host Pyro objects itself, Pyrolite may be a good choice to connect java or .NET and python.
 
 Version 4.18 changes:
-@todo
+Require Serpent library 1.17 because of critical fixes regarding serialization and parsing of strings.
 </description>
 </project>
