--- a/dotnet/Pyrolite.PickleExample/Pyrolite.PickleExample.csproj
+++ b/dotnet/Pyrolite.PickleExample/Pyrolite.PickleExample.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <ProjectGuid>{840FD314-D643-4CD1-9A18-E1DDDD3B2338}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>Exe</OutputType>
     <RootNamespace>Pyrolite.PickleExample</RootNamespace>
     <AssemblyName>Pyrolite.PickleExample</AssemblyName>
@@ -14,6 +14,9 @@
     <IntermediateOutputPath>obj\$(Configuration)\</IntermediateOutputPath>
     <WarningLevel>4</WarningLevel>
     <NoWin32Manifest>False</NoWin32Manifest>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <OutputPath>bin\Debug\</OutputPath>
