--- a/dotnet/Pyrolite.TestPyroNaming/Pyrolite.TestPyroNaming.csproj
+++ b/dotnet/Pyrolite.TestPyroNaming/Pyrolite.TestPyroNaming.csproj
@@ -69,15 +69,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Razorvine.Serpent">
+      <HintPath>..\lib\Razorvine.Serpent.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestNaming.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Pyrolite\Pyrolite.csproj">
