dotnet: properly recognise [Serializable] and [DataContract]. Fixes #43

--- a/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
+++ b/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
@@ -86,6 +86,9 @@
     <Reference Include="nunit.framework">
       <HintPath>..\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pickle\ArrayConstructorTests.cs" />
