--- a/dotnet/Pyrolite/Pyrolite.csproj
+++ b/dotnet/Pyrolite/Pyrolite.csproj
@@ -94,6 +94,9 @@
     <Reference Include="System">
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pickle\InvalidOpcodeException.cs" />
