--- a/java/pom.xml
+++ b/java/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>net.razorvine</groupId>
 	<artifactId>pyrolite</artifactId>
-	<version>4.19</version>
+	<version>4.20-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>pyrolite</name>
@@ -68,7 +68,7 @@
 		<url>https://github.com/irmen/Pyrolite</url>
 		<connection>scm:git:https://github.com/irmen/Pyrolite.git</connection>
 		<developerConnection>scm:git:https://github.com/irmen/Pyrolite.git</developerConnection>
-		<tag>pyrolite-4.19</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<issueManagement>
 		<system>Github</system>
