--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: java
-jdk:
-  - oraclejdk8
+# jdk:
+#  - oraclejdk8
 sudo: false
+dist: trusty
 script: mvn -f java/pom.xml verify
 cache:
   directories:
