--- a/dotnet-core/Razorvine.Pyrolite/DebugHelper/DebugHelper.csproj
+++ b/dotnet-core/Razorvine.Pyrolite/DebugHelper/DebugHelper.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Pyrolite\Pyrolite.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Razorvine.Serpent" Version="1.18.0" />
+  </ItemGroup>
 </Project>
