--- a/dotnet/Razorvine.Pyrolite/Tests/Tests.csproj
+++ b/dotnet/Razorvine.Pyrolite/Tests/Tests.csproj
@@ -2,13 +2,16 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <AssemblyName>UnitTests</AssemblyName>
+    <RootNamespace>UnitTests</RootNamespace>
     <LangVersion>6</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.2.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.2.0" />
-    <PackageReference Include="Razorvine.Serpent" Version="1.18.0" />
+    <PackageReference Include="Razorvine.Serpent" Version="1.20.0" />
+    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Pyrolite\Pyrolite.csproj" />
