--- a/dotnet/Razorvine.Pyrolite/Pyrolite/Pyrolite.csproj
+++ b/dotnet/Razorvine.Pyrolite/Pyrolite/Pyrolite.csproj
@@ -7,9 +7,9 @@
     <Authors>Irmen de Jong</Authors>
     <Product>Serpent Python literal expression serialization</Product>
     <PackageId>Razorvine.Pyrolite</PackageId>
-    <Version>4.20.0</Version>
-    <AssemblyVersion>4.20.0.0</AssemblyVersion>
-    <FileVersion>4.20.0.0</FileVersion>
+    <Version>4.21.0</Version>
+    <AssemblyVersion>4.21.0.0</AssemblyVersion>
+    <FileVersion>4.21.0.0</FileVersion>
     <Summary>Pyro (Python Remote Objects) client library</Summary>
     <Description>Thin client-side communication library to connect to Python applications, using the Pyro protocol.
 Also includes Pickle/Unpickle.
@@ -20,9 +20,9 @@ More info about Pyro: http://pythonhosted.org/Pyro4/</Description>
     <RepositoryUrl>https://github.com/irmen/Pyrolite.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>pyro python rpc remote-objects</PackageTags>
-    <PackageReleaseNotes>Migrated to dotnet core and NetStandard 2.0</PackageReleaseNotes>
+    <PackageReleaseNotes>Code style and C# language level cleanups, serpent 1.25 dependency, Compatible with dotnet core and NetStandard 2.0</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Razorvine.Serpent" Version="1.20.0" />
+    <PackageReference Include="Razorvine.Serpent" Version="1.25.0" />
   </ItemGroup>
 </Project>
