--- a/java/pom.xml
+++ b/java/pom.xml
@@ -24,12 +24,13 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.3</version>
+					<version>3.8.0</version>
 					<configuration>
 						<source>1.8</source>
 						<target>1.8</target>
-						<compilerArgument>-Xlint:unchecked</compilerArgument>
-						<compilerArgument>-Xlint:deprecation</compilerArgument>
+						<compilerArgs>
+							<arg>-Xlint:all</arg>
+						</compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -46,7 +47,7 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<configuration>
-						<additionalparam>-Xdoclint:none</additionalparam>
+						<doclint>none</doclint>
 					</configuration>
 				</plugin>
 			</plugins>
