--- a/dotnet/Razorvine.Pyrolite/Pyrolite/Pyrolite.csproj
+++ b/dotnet/Razorvine.Pyrolite/Pyrolite/Pyrolite.csproj
@@ -11,6 +11,9 @@
     <Version>4.24.0</Version>
     <AssemblyVersion>4.24.0.0</AssemblyVersion>
     <FileVersion>4.24.0.0</FileVersion>
+    <SignAssembly>true</SignAssembly>
+    <DelaySign>false</DelaySign>
+    <AssemblyOriginatorKeyFile>Pyrolite.snk</AssemblyOriginatorKeyFile>
     <Summary>Pyro (Python Remote Objects) client library</Summary>
     <Description>Thin client-side communication library to connect to Python applications, using the Pyro protocol.
 Also includes Pickle/Unpickle.
