updaed release note

--- a/dotnet/Razorvine.Pyrolite/Pyrolite/Pyrolite.csproj
+++ b/dotnet/Razorvine.Pyrolite/Pyrolite/Pyrolite.csproj
@@ -28,7 +28,7 @@ More info about Pyro: https://pyro4.readthedocs.io/</Description>
     <RepositoryUrl>https://github.com/irmen/Pyrolite.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>pyro python rpc remote-objects</PackageTags>
-    <PackageReleaseNotes>Unpickler performance improved when reading from memory buffer. 
+    <PackageReleaseNotes>Unpickler and Pickler performance improved greatly when reading from memory buffer. 
 Unpickler memo cleared after STOP opcode to fix invalid memo reuse when unpickler wasn't disposed/closed.
 </PackageReleaseNotes>
   </PropertyGroup>
