--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
-language: java
-# jdk:
-#  - oraclejdk8
-sudo: false
-dist: trusty
-script: mvn -f java/pom.xml verify
-cache:
-  directories:
-    - '$HOME/.m2/repository'
+matrix:
+  include:
+    - language: java
+      # jdk:
+      #  - oraclejdk8
+      sudo: false
+      dist: trusty
+      script: mvn -f java/pom.xml verify
+      cache:
+        directories:
+          - '$HOME/.m2/repository'
+
+    - language: csharp
+      mono: none
+      dotnet: 2.2.0
+      script: dotnet test dotnet/Razorvine.Pyrolite/Tests
