added some badges and attempt to fix travis dotnet build

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ matrix:
 
     - language: csharp
       mono: none
-      dotnet: 2.2.0
+      dist: xenial
+      dotnet: 2.2
       script: dotnet test dotnet/Razorvine.Pyrolite/Tests
