--- a/java/pom.xml
+++ b/java/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>net.razorvine</groupId>
 	<artifactId>pyrolite</artifactId>
-	<version>4.31-SNAPSHOT</version>
+	<version>5.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>pyrolite</name>
@@ -94,13 +94,12 @@
 			<url>https://raw.githubusercontent.com/irmen/Pyrolite/master/LICENSE</url>
 		</license>
 	</licenses>
-	<description>This library allows your Java program to interface very easily with the Python world. It uses the Pyro protocol to call methods on remote objects. (See https://github.com/irmen/Pyro4). To that end, it also contains and uses a feature complete pickle protocol implementation -read and write- to exchange data with Pyro/Python.
+	<description>This library allows your Java program to interface very easily with the Python world. It uses the Pyro protocol to call methods on remote objects. (See https://github.com/irmen/Pyro4).
 
 Pyrolite only implements part of the client side Pyro library, hence its name 'lite'...  But because Pyrolite has no dependencies, it is a much lighter way to use Pyro from Java/.NET than a solution with jython+pyro or IronPython+Pyro would provide. So if you don't need Pyro's full feature set, and don't require your Java/.NET code to host Pyro objects itself, Pyrolite may be a good choice to connect java or .NET and python.
 
 (More info about Pyro itself: https://pyro4.readthedocs.io/ )
 
-Version 4.30 changes:
-Support for unpickling protocol 5 pickles with out-of-band buffers (Python 3.8)
+Version 5.0 changes: support Pyro5 wire protocol. Dropped support of Pyro4.
 </description>
 </project>
