--- a/java/pom.xml
+++ b/java/pom.xml
@@ -65,7 +65,7 @@
 		<dependency>
 			<groupId>net.razorvine</groupId>
 			<artifactId>serpent</artifactId>
-			<version>1.23</version>
+			<version>1.30</version>
 		</dependency>
 	</dependencies>
 	<scm>
@@ -94,12 +94,10 @@
 			<url>https://raw.githubusercontent.com/irmen/Pyrolite/master/LICENSE</url>
 		</license>
 	</licenses>
-	<description>This library allows your Java program to interface very easily with the Python world. It uses the Pyro protocol to call methods on remote objects. (See https://github.com/irmen/Pyro4).
+	<description>This library allows your Java program to interface very easily with the Python world. It uses the Pyro protocol to call methods on remote objects. (See https://pyro5.readthedocs.io/).
 
-Pyrolite only implements part of the client side Pyro library, hence its name 'lite'...  But because Pyrolite has no dependencies, it is a much lighter way to use Pyro from Java/.NET than a solution with jython+pyro or IronPython+Pyro would provide. So if you don't need Pyro's full feature set, and don't require your Java/.NET code to host Pyro objects itself, Pyrolite may be a good choice to connect java or .NET and python.
+Pyrolite only implements part of the client side Pyro library, hence its name 'lite'... So if you don't need Pyro's full feature set, Pyrolite may be a good choice to connect java or .NET and python.
 
-(More info about Pyro itself: https://pyro4.readthedocs.io/ )
-
-Version 5.0 changes: support Pyro5 wire protocol. Dropped support of Pyro4.
+Version 5.0 changes: support Pyro5 wire protocol. Dropped support of Pyro4 (stick to version 4.xx for that).
 </description>
 </project>
