--- a/dotnet/Razorvine.Pyrolite/Benchmarks/Benchmarks.csproj
+++ b/dotnet/Razorvine.Pyrolite/Benchmarks/Benchmarks.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <LangVersion>7.3</LangVersion>
+    <TargetFramework>net7.0</TargetFramework>
+    <LangVersion>latestmajor</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
