--- a/dotnet/Razorvine.Pyrolite/NamingExample/NamingExample.csproj
+++ b/dotnet/Razorvine.Pyrolite/NamingExample/NamingExample.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <LangVersion>7.3</LangVersion>
+    <TargetFramework>net7.0</TargetFramework>
+    <LangVersion>latestmajor</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Pyrolite\Pyrolite.csproj" />
